[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 引入 rand
rand = "0.8.5"
num = "0.4.0"
# 获取cpu信息
heim = {version = "0.1.0-rc.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
futures = "0.3"
futures-timer = "~3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
